--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="optional">Optional</string>
     <string name="agenda">Agenda</string>
     <string name="back">Back</string>
+    <string name="back2">Back</string>
 
     <string-array name="dayOfWeek">
         <item>   </item>
