--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,13 @@
     <string name="agenda">Agenda</string>
     <string name="back">Back</string>
     <string name="back2">Back</string>
+    <string name="class_time_1">Class Time 1:</string>
+    <string name="class_time_2">Class Time 2:</string>
+    <string name="class_time_3">Class Time 3:</string>
+    <string name="class_time_4">Class Time 4:</string>
+    <string name="class_time_5">Class Time 5:</string>
+    <string name="class_name">Class Name:</string>
+    <string name="name">Name</string>
 
     <string-array name="dayOfWeek">
         <item>   </item>
